wellesleynet/roles/k8s/files/syncthing.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  serviceName: "syncthing"
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
      # dogfooding my changes from syncthing/syncthing#6143
      - image: jyundt/syncthing:latest
        imagePullPolicy: Always
        name: syncthing
        ports:
        - containerPort: 22000
        - containerPort: 8384
        livenessProbe:
          tcpSocket:
            port: 8384
        args:
        - -no-browser
        - -no-restart
        - -logflags=7
        - -home=/var/syncthing
        volumeMounts:
        - name: syncthing-home
          mountPath: "/var/syncthing"
        - name: syncthing-secrets
          mountPath: "/var/syncthing/cert.pem"
          subPath: syncthing-cert.pem
        - name: syncthing-secrets
          mountPath: "/var/syncthing/key.pem"
          subPath: syncthing-key.pem
        - name: syncthing-secrets
          mountPath: "/var/syncthing/https-cert.pem"
          subPath: syncthing-https-cert.pem
        - name: syncthing-secrets
          mountPath: "/var/syncthing/https-key.pem"
          subPath: syncthing-https-key.pem
        # Note that having the config file RO will throw warnings about
        # attempts to modify the config during normal operation.
        - name: syncthing-secrets
          mountPath: "/var/syncthing/config.xml"
          subPath: syncthing-config.xml
        - name: syncthing-data
          mountPath: "/var/syncthing/data"
      - image: jyundt/strelaysrv
        imagePullPolicy: Always
        name: strelaysrv
        ports:
        - containerPort: 22067
        - containerPort: 22070
        args:
        - -keys
        - /var/strelaysrv
        - -pools
        - ""
        - -debug
        volumeMounts:
        - name: strelaysrv-home
          mountPath: "/var/strelaysrv"
        - name: syncthing-secrets
          mountPath: "/var/strelaysrv/cert.pem"
          subPath: strelaysrv-cert.pem
        - name: syncthing-secrets
          mountPath: "/var/strelaysrv/key.pem"
          subPath: strelaysrv-key.pem
      - image: jyundt/stdiscosrv
        imagePullPolicy: Always
        name: stdiscosrv
        ports:
        - containerPort: 19200
        - containerPort: 8443
        args:
        - -db-dir
        - /var/stdiscosrv
        - -cert
        - /var/stdiscosrv/cert.pem
        - -key
        - /var/stdiscosrv/key.pem
        - -http
        - -debug
        volumeMounts:
        - name: stdiscosrv-home
          mountPath: "/var/stdiscosrv"
        - name: syncthing-secrets
          mountPath: "/var/stdiscosrv/cert.pem"
          subPath: stdiscosrv-cert.pem
        - name: syncthing-secrets
          mountPath: "/var/stdiscosrv/key.pem"
          subPath: stdiscosrv-key.pem
      volumes:
      - name: syncthing-home
        emptyDir:
          medium: Memory
      - name: syncthing-data
        persistentVolumeClaim:
          claimName: syncthing
      - name: strelaysrv-home
        emptyDir:
          medium: Memory
      - name: stdiscosrv-home
        emptyDir:
          medium: Memory
      - name: syncthing-secrets
        secret:
          secretName: syncthing
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: syncthing
spec:
  selector:
    app: syncthing
  ports:
  - name: syncthing-ui
    port: 8384
    protocol: TCP
    targetPort: 8384
  - name: syncthing
    port: 22000
    protocol: TCP
    targetPort: 22000
  - name: strelaysrv-data
    port: 22067
    protocol: TCP
    targetPort: 22067
  - name: strelaysrv-status
    port: 22070
    protocol: TCP
    targetPort: 22070
  - name: stdiscosrv-replication
    port: 19200
    protocol: TCP
    targetPort: 19200
  - name: stdiscosrv
    port: 8443
    protocol: TCP
    targetPort: 8443
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: syncthing
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://login.kiski.co/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.kiski.co/oauth2/start?rd=https://$host$request_uri"
spec:
  rules:
  - host: syncthing.kiski.co
    http:
      paths:
      - backend:
          serviceName: syncthing
          servicePort: 8384
  tls:
  - hosts:
    - syncthing.kiski.co
    secretName: kiskico-wildcard
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: syncthing-stdiscosrv
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      ssl_verify_client optional_no_ca;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-SSL-Cert $ssl_client_cert;
spec:
  rules:
  - host: stdiscosrv.kiski.co
    http:
      paths:
      - backend:
          serviceName: syncthing
          servicePort: 8443
  tls:
  - hosts:
    - stdiscosrv.kiski.co
    secretName: kiskico-wildcard
